fixed navbar collapse issue

--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,7 @@ body{
     text-decoration: none;
     text-align: center;
 }
+
+.nav-item:hover{
+    background-color: #9b968d;
+}
